--- a/language_experiments/experiment2/index.html
+++ b/language_experiments/experiment2/index.html
@@ -11,7 +11,7 @@
 		<p>Pretty much all of the testing here will be through the console.</p>
 		<p>Available function signatures to try to mutate state of variables:<br></p>
 		<ul>
-			<li>declare_var(var_type, var_name, var_value);</li>
+			<li>declare_var(context, var_type, var_name, var_value); (check code for valid contexts)</li>
 			<li>set_var(var_type, var_name, var_value);</li>
 			<li>get_value_of_var(var_name);</li>
 			<li>enter_scope();</li>
